# Titan

./: .gitignore  Cargo.toml  README.md  check_model.py  convert_weights_working.py  create_model_trace.py  debug_tch_names.py  generate_mapping.py
.github/workflows/: acceptance.yml
benches/: blend_bench.rs  eval_bench.rs  mcts_benchmark.rs  nnue_bench.rs  nnue_inc_bench.rs  nps_bench.rs  qsearch_bench.rs  search_bench.rs
src/: chess_openings.rs  device_utils.rs  encoder.rs  lib.rs  main.rs  mcts.rs  network.rs  perft.rs  uci.rs
src/board/: cozy.rs  mod.rs  pleco.rs
src/eval/: mod.rs  nnue.rs
src/eval/nnue/: accumulator.rs  features.rs  loader.rs  mod.rs  network.rs  quant.rs
src/io/: fen.rs  mod.rs
src/search/: alphabeta.rs  alphabeta_pleco.rs  alphabeta_temp.rs  eval.rs  mod.rs  noise.rs  safety.rs  see.rs  see_pleco.rs  tt.rs  tt_pleco.rs  zobrist.rs
src/selfplay/: mod.rs
src/suites/: famous_20.txt  matein1.txt  matein2.txt  matein3.txt  matein4.txt
tests/: compare_engines.rs  cont_history.rs  eval_blend.rs  eval_blend_quant.rs  eval_pst.rs  experimental_blunder.rs  hanging_move_guard.rs  heuristics_v1.rs  history_table.rs  mate_acceptance.rs  nnue_eval.rs  nnue_file.rs  nnue_halfkp.rs  nnue_quant.rs  nnue_stub.rs  noise_safety.rs  nullmove.rs  ordering.rs  perft.rs  pleco_cont_history.rs  pleco_counter_move.rs  pleco_positions.rs  pleco_see.rs  pleco_see_ordering.rs  pleco_see_prune_effect.rs  pleco_singular.rs  positions_consistency.rs  qsearch.rs  root_parallel.rs  root_parallel_quant.rs  search_basic.rs  search_movetime.rs  search_threads.rs  see.rs  selfplay.rs  selfplay_io.rs  split_points.rs  time_manager.rs  tt_aging.rs  tt_and_time.rs  (+4 more)
tests/data/: positions_sample.jsonl
