[package]
name = "piebot"
version = "0.1.0"
edition = "2021"
authors = ["PieBot Team"]
description = "A Rust chess engine with CPU-only NNUE and optimized alpha-beta search"

[dependencies]
# Fast board/movegen for new engine path
cozy-chess = "0.3"
pleco = { version = "0.5", optional = true }

## (Removed old Torch/ndarray dependencies)

# Parallel processing
rayon = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress bars
indicatif = "0.17"

# Random number generation
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

[features]
default = ["board-pleco"]
# CPU SIMD optimization toggles (used later in NNUE/eval paths)
simd-neon = []
simd-avx2 = []
simd-avx512 = []
board-pleco = ["pleco"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"


[[bench]]
name = "eval_bench"
harness = false

[[bench]]
name = "qsearch_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "nnue_bench"
harness = false

[[bench]]
name = "blend_bench"
harness = false

[[bench]]
name = "nnue_inc_bench"
harness = false

[[bench]]
name = "nps_bench"
harness = false



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
